Add Server register & login interface.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,14 @@ include_directories(include)
 
 list(APPEND SRC_LIST src/Debug.cpp)
 list(APPEND SRC_LIST src/SocketBase.cpp)
-list(APPEND SRC_LIST src/ServerSocket.cpp)
-list(APPEND SRC_LIST src/ClientSocket.cpp)
 
-add_executable(Server ${SRC_LIST} src/server_main.cpp)
-add_executable(Client ${SRC_LIST} src/client_main.cpp)
+list(APPEND SERVER_SRC_LIST ${SRC_LIST})
+list(APPEND CLIENT_SRC_LIST ${SRC_LIST})
+
+list(APPEND SERVER_SRC_LIST src/ServerSocket.cpp)
+list(APPEND SERVER_SRC_LIST src/ServerDB.cpp)
+
+list(APPEND CLIENT_SRC_LIST src/ClientSocket.cpp)
+
+add_executable(Server ${SERVER_SRC_LIST} src/server_main.cpp)
+add_executable(Client ${CLIENT_SRC_LIST} src/client_main.cpp)
